--- a/services/index.html
+++ b/services/index.html
@@ -403,6 +403,59 @@
             font-size: 1.1em;
         }
 
+        /* Introduction Section */
+        .intro-section {
+            padding: 60px 20px;
+            background: var(--white);
+        }
+
+        .intro-content {
+            max-width: 900px;
+            margin: 0 auto;
+        }
+
+        .intro-content h2 {
+            color: var(--primary-blue);
+            font-size: 2.2em;
+            margin-bottom: 25px;
+            text-align: center;
+        }
+
+        .intro-content p {
+            font-size: 1.1em;
+            line-height: 1.8;
+            color: var(--text-dark);
+            margin-bottom: 20px;
+        }
+
+        .intro-stats {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 30px;
+            margin-top: 40px;
+        }
+
+        .stat-card {
+            background: var(--light-bg);
+            padding: 30px;
+            border-radius: 12px;
+            text-align: center;
+            border-left: 4px solid var(--primary-gold);
+        }
+
+        .stat-number {
+            font-size: 2.5em;
+            color: var(--primary-blue);
+            font-weight: 700;
+            display: block;
+            margin-bottom: 10px;
+        }
+
+        .stat-label {
+            color: var(--text-light);
+            font-size: 1em;
+        }
+
         /* Sections */
         section {
             padding: 80px 20px;
@@ -603,6 +656,43 @@
             background: var(--primary-gold);
             border-color: var(--white);
             transform: translateY(-5px);
+        }
+
+        /* Why Choose Section */
+        .why-choose {
+            background: var(--white);
+            padding: 60px 20px;
+        }
+
+        .why-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 30px;
+            margin-top: 40px;
+        }
+
+        .why-card {
+            background: var(--light-bg);
+            padding: 30px;
+            border-radius: 12px;
+            text-align: center;
+        }
+
+        .why-icon {
+            font-size: 3em;
+            margin-bottom: 15px;
+            display: block;
+        }
+
+        .why-card h3 {
+            color: var(--primary-blue);
+            font-size: 1.4em;
+            margin-bottom: 15px;
+        }
+
+        .why-card p {
+            color: var(--text-light);
+            line-height: 1.6;
         }
 
         /* CTA Banner */
@@ -821,6 +911,84 @@
             <p>Professional chartered accountancy solutions for individuals, startups, and enterprises</p>
             <div class="hero-highlight">
                 ⭐ Trusted by 500+ Clients | 15+ Years Experience | Pan-India Services
+            </div>
+        </div>
+    </section>
+
+        <!-- Introduction Section -->
+    <section class="intro-section">
+        <div class="container">
+            <div class="intro-content">
+                <h2>Your Trusted Partner for All Taxation and Compliance Needs</h2>
+                <p>
+                    Sidhi & Associates is a leading chartered accountancy firm serving businesses and individuals across India for over 15 years. We specialize in providing comprehensive taxation, compliance, and business advisory services that help our clients navigate the complex Indian regulatory landscape with confidence.
+                </p>
+                <p>
+                    Our team of experienced Chartered Accountants, tax consultants, and compliance experts delivers personalized solutions tailored to your specific needs. Whether you're a salaried individual looking to file your income tax return, an entrepreneur starting a new business, or an established company requiring audit and compliance services, we have the expertise to support your financial goals.
+                </p>
+                <p>
+                    With offices in Panchkula, Zirakpur, Bareilly, Bangalore, Ghaziabad, and Lucknow, we combine local market knowledge with national expertise to deliver services that meet the highest professional standards. Our client-centric approach, transparent pricing, and commitment to timely delivery have made us the preferred CA firm for hundreds of satisfied clients.
+                </p>
+
+                <div class="intro-stats">
+                    <div class="stat-card">
+                        <span class="stat-number">500+</span>
+                        <span class="stat-label">Active Clients</span>
+                    </div>
+                    <div class="stat-card">
+                        <span class="stat-number">15+</span>
+                        <span class="stat-label">Years Experience</span>
+                    </div>
+                    <div class="stat-card">
+                        <span class="stat-number">6</span>
+                        <span class="stat-label">Cities Served</span>
+                    </div>
+                    <div class="stat-card">
+                        <span class="stat-number">98%</span>
+                        <span class="stat-label">Client Satisfaction</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Why Choose Us -->
+    <section class="why-choose section-alt">
+        <div class="container">
+            <h2>Why Choose Sidhi & Associates for CA Services?</h2>
+            <p class="section-intro">We go beyond traditional accounting to become your trusted financial partner</p>
+            
+            <div class="why-grid">
+                <div class="why-card">
+                    <span class="why-icon">🎓</span>
+                    <h3>Expert Team</h3>
+                    <p>ICAI certified Chartered Accountants with specialized expertise in taxation, GST, and corporate law. Our team stays updated with the latest regulatory changes to provide accurate advice.</p>
+                </div>
+                <div class="why-card">
+                    <span class="why-icon">💰</span>
+                    <h3>Transparent Pricing</h3>
+                    <p>No hidden charges or surprise fees. We provide detailed quotations upfront with clear breakdowns of all costs. Competitive rates without compromising on service quality.</p>
+                </div>
+                <div class="why-card">
+                    <span class="why-icon">⏰</span>
+                    <h3>Timely Delivery</h3>
+                    <p>We understand the importance of deadlines. Our streamlined processes ensure your returns, registrations, and filings are completed well before due dates, avoiding penalties.</p>
+                </div>
+                <div class="why-card">
+                    <span class="why-icon">🔒</span>
+                    <h3>Data Security</h3>
+                    <p>Your financial information is protected with bank-grade security. We maintain strict confidentiality protocols and secure document management systems.</p>
+                </div>
+                <div class="why-card">
+                    <span class="why-icon">📱</span>
+                    <h3>Easy Communication</h3>
+                    <p>Reach us via phone, WhatsApp, or email. Get quick responses to your queries within 2 hours during business days. We believe in accessible, hassle-free communication.</p>
+                </div>
+                <div class="why-card">
+                    <span class="why-icon">🎯</span>
+                    <h3>Personalized Service</h3>
+                    <p>No two clients are the same. We take time to understand your unique situation and provide customized solutions that align with your financial goals and business objectives.</p>
+                </div>
             </div>
         </div>
     </section>
