--- a/about/index.html
+++ b/about/index.html
@@ -222,6 +222,7 @@
             font-size: 3.5em; 
             margin-bottom: 20px; 
             font-weight: 800;
+            color: var(--primary-gold);
         }
         .hero p { 
             font-size: 1.4em; 
