--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
             <a href="#testimonials">Testimonials</a>
             <a href="#locations">Locations</a>
             <a href="#contact">Contact</a>
+            <a href="/about/">About</a>
         </div>
     </nav>
 
