--- a/index.html
+++ b/index.html
@@ -670,10 +670,10 @@
     <nav>
         <div class="container">
             <a href="/services/">Services</a>
-            <a href="#why-us">Why Us</a>
-            <a href="#testimonials">Testimonials</a>
-            <a href="#locations">Locations</a>
-            <a href="#contact">Contact</a>
+            <a href="/why-us/">Why Us</a>
+            <a href="/faq/">FAQs</a>
+            <!-- <a href="#locations">Locations</a> -->
+            <a href="/calculator/">Calculators</a>
             <a href="/about/">About</a>
         </div>
     </nav>
