--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
     <meta name="author" content="Sidhi & Associates">
+    <meta name="p:domain_verify" content="77eb159f37633d2793993c148dbfc147"/>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
