--- a/calculator/capital-gains-calculator/index.html
+++ b/calculator/capital-gains-calculator/index.html
@@ -7,9 +7,9 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>Capital Gains Tax Calculator 2024-25 - LTCG & STCG Calculator India | Free Tool</title>
+    <title>Capital Gains Tax Calculator - LTCG & STCG Calculator India | Free Tool</title>
     <meta name="title" content="Capital Gains Tax Calculator - Calculate LTCG & STCG Tax on Property, Stocks, Mutual Funds">
-    <meta name="description" content="Free Capital Gains Tax Calculator for FY 2024-25. Calculate LTCG & STCG tax on property, stocks, mutual funds. Indexation benefit, exemptions u/s 54, 54EC, 54F included. By expert CAs.">
+    <meta name="description" content="Free Capital Gains Tax Calculator. Calculate LTCG & STCG tax on property, stocks, mutual funds. Indexation benefit, exemptions u/s 54, 54EC, 54F included. By expert CAs.">
     <meta name="keywords" content="capital gains calculator, LTCG calculator, STCG calculator, property capital gains, stock capital gains, mutual fund capital gains, section 54, section 54EC, indexation calculator, capital gains tax India">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
     
@@ -875,9 +875,9 @@
 
     <section class="hero">
         <div class="container">
-            <h2>📈 Capital Gains Tax Calculator 2024-25</h2>
+            <h2>📈 Capital Gains Tax Calculator</h2>
             <p><strong>Calculate LTCG & STCG Tax on Property, Stocks, Mutual Funds</strong></p>
-            <p>Indexation Benefit | Exemptions u/s 54, 54EC, 54F | FY 2024-25</p>
+            <p>Indexation Benefit | Exemptions u/s 54, 54EC, 54F</p>
             <div class="hero-stats">
                 <div class="hero-stat">
                     <strong>Property</strong>
@@ -1104,7 +1104,7 @@
                 </div>
 
                 <div class="info-card">
-                    <h3>💰 LTCG Tax Rates FY 2024-25</h3>
+                    <h3>💰 LTCG Tax Rates</h3>
                     <ul>
                         <li><strong>Property/Real Estate:</strong> 20% with indexation benefit</li>
                         <li><strong>Listed Equity (STT paid):</strong> 12.5% (above ₹1.25L exempt)</li>
@@ -1116,7 +1116,7 @@
                 </div>
 
                 <div class="info-card">
-                    <h3>📈 STCG Tax Rates FY 2024-25</h3>
+                    <h3>📈 STCG Tax Rates</h3>
                     <ul>
                         <li><strong>Listed Equity (STT paid):</strong> 20% flat</li>
                         <li><strong>Equity Mutual Funds:</strong> 20% flat</li>
