Update index.html remove 2024

--- a/calculator/emi-calculator/index.html
+++ b/calculator/emi-calculator/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="https://sidhiandassociates.github.io/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>EMI Calculator 2024 - Home Loan, Personal Loan, Car Loan EMI Calculator India | Free Tool</title>
+    <title>EMI Calculator - Home Loan, Personal Loan, Car Loan EMI Calculator India | Free Tool</title>
     <meta name="title" content="EMI Calculator - Calculate Monthly EMI for Home, Personal, Car Loan">
     <meta name="description" content="Free EMI Calculator for all loans. Calculate monthly EMI, total interest, loan amortization schedule. Home loan, personal loan, car loan, education loan EMI. By expert CAs.">
     <meta name="keywords" content="EMI calculator, home loan EMI, personal loan EMI, car loan EMI, loan calculator, EMI calculation formula, amortization schedule, interest calculator, monthly EMI">
@@ -689,7 +689,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>💳 EMI Calculator 2024</h2>
+            <h2>💳 EMI Calculator</h2>
             <p><strong>Calculate Monthly EMI for All Loans</strong></p>
             <p>Home Loan | Personal Loan | Car Loan | Education Loan</p>
             <div class="hero-stats">
