--- a/calculator/fire-calculator/index.html
+++ b/calculator/fire-calculator/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>FIRE Calculator - Financial Independence Retire Early Calculator India | Free Tool 2024</title>
+    <title>FIRE Calculator - Financial Independence Retire Early Calculator India | Free Tool</title>
     <meta name="title" content="FIRE Calculator India - Calculate When You Can Retire Early">
     <meta name="description" content="Free FIRE Calculator to plan early retirement in India. Calculate your Financial Independence number, retirement corpus, monthly savings needed. Plan FIRE journey with expert CAs. Start now!">
     <meta name="keywords" content="FIRE calculator India, financial independence calculator, early retirement calculator, FIRE number calculator, retirement corpus calculator, financial freedom calculator, retire early India, FIRE planning">
