--- a/calculator/goal-planning/index.html
+++ b/calculator/goal-planning/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>Goal Planning Calculator 2024 - Financial Goal Planner India | Child Education, Marriage, House</title>
+    <title>Goal Planning Calculator - Financial Goal Planner India | Child Education, Marriage, House</title>
     <meta name="title" content="Goal Planning Calculator - Plan Child Education, Marriage, House Purchase Goals">
     <meta name="description" content="Free Goal Planning Calculator. Plan child education, marriage, house purchase, retirement goals. Calculate monthly SIP needed with inflation adjustment. By expert CAs.">
     <meta name="keywords" content="goal planning calculator, financial goal planner, child education planning, marriage planning, house purchase calculator, SIP goal calculator, future value calculator, inflation adjusted planning">
@@ -228,7 +228,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>🎯 Goal Planning Calculator 2024</h2>
+            <h2>🎯 Goal Planning Calculator</h2>
             <p>Plan Your Financial Goals with Precision</p>
         </div>
     </section>
