--- a/calculator/home-loan-eligibility-calculator/index.html
+++ b/calculator/home-loan-eligibility-calculator/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>Home Loan Eligibility Calculator 2024 - Check Maximum Loan Amount | Free Tool</title>
-    <meta name="title" content="Home Loan Eligibility Calculator 2024 - Check Maximum Loan Amount">
+    <title>Home Loan Eligibility Calculator - Check Maximum Loan Amount | Free Tool</title>
+    <meta name="title" content="Home Loan Eligibility Calculator - Check Maximum Loan Amount">
     <meta name="description" content="Free Home Loan Eligibility Calculator. Calculate maximum loan amount based on income, EMI, interest rate. Check home loan eligibility instantly. By Sidhi & Associates CAs.">
     <meta name="keywords" content="home loan calculator, loan eligibility calculator, housing loan calculator, maximum loan amount, EMI calculator, home loan eligibility, mortgage calculator">
     <meta name="robots" content="index, follow, max-image-preview:large">
