--- a/calculator/income-tax-calculator/index.html
+++ b/calculator/income-tax-calculator/index.html
@@ -7,10 +7,10 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>Income Tax Calculator 2024-25 - Old vs New Regime Comparison | Free Tool</title>
-    <meta name="title" content="Income Tax Calculator 2024-25 - Old vs New Regime Comparison">
-    <meta name="description" content="Free Income Tax Calculator for FY 2024-25. Compare old vs new tax regime. Calculate tax liability, deductions, take-home salary. By Sidhi & Associates CAs.">
-    <meta name="keywords" content="income tax calculator, tax calculator 2024-25, old vs new tax regime, income tax calculation, tax saver calculator, take home salary calculator">
+    <title>Income Tax Calculator - Old vs New Regime Comparison | Free Tool</title>
+    <meta name="title" content="Income Tax Calculator - Old vs New Regime Comparison">
+    <meta name="description" content="Free Income Tax Calculator. Compare old vs new tax regime. Calculate tax liability, deductions, take-home salary. By Sidhi & Associates CAs.">
+    <meta name="keywords" content="income tax calculator, tax calculator, old vs new tax regime, income tax calculation, tax saver calculator, take home salary calculator">
     <meta name="robots" content="index, follow, max-image-preview:large">
     
     <!-- Canonical -->
@@ -600,9 +600,9 @@
 
     <section class="hero">
         <div class="container">
-            <h2>💰 Income Tax Calculator 2024-25</h2>
+            <h2>💰 Income Tax Calculator</h2>
             <p>Calculate Tax Liability & Compare Old vs New Regime</p>
-            <p style="font-size: 1em; opacity: 0.9; margin-top: 10px;">FY 2024-25 (AY 2025-26) • Latest Tax Rates • Expert CA Tool</p>
+            <p style="font-size: 1em; opacity: 0.9; margin-top: 10px;">Latest Tax Rates • Expert CA Tool</p>
         </div>
     </section>
 
