--- a/calculator/loan-comparison/index.html
+++ b/calculator/loan-comparison/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>Loan Comparison Calculator 2024 - Compare Home, Personal, Car Loans India | Free Tool</title>
+    <title>Loan Comparison Calculator - Compare Home, Personal, Car Loans India | Free Tool</title>
     <meta name="title" content="Loan Comparison Calculator - Compare EMI, Interest & Choose Best Loan">
     <meta name="description" content="Free Loan Comparison Calculator to compare multiple loans side-by-side. Compare EMI, total interest, processing fees, and total cost. Find the best home loan, personal loan, car loan, business loan. Save lakhs on interest. By expert CAs.">
     <meta name="keywords" content="loan comparison calculator, compare home loans, compare personal loans, EMI comparison, loan interest comparison, best loan calculator, home loan comparison, car loan comparison, business loan comparison">
@@ -909,7 +909,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>🏦 Loan Comparison Calculator 2024</h2>
+            <h2>🏦 Loan Comparison Calculator</h2>
             <p><strong>Compare Multiple Loans & Save Lakhs</strong></p>
             <p>Compare Home Loans, Personal Loans, Car Loans, Business Loans Side-by-Side</p>
             <div class="hero-stats">
@@ -1015,7 +1015,7 @@
 
                 <div class="info-card">
                     <h3>💰 Home Loan Comparison</h3>
-                    <p><strong>Typical Rates (2024):</strong></p>
+                    <p><strong>Typical Rates:</strong></p>
                     <ul>
                         <li><strong>SBI:</strong> 8.50-9.65% p.a.</li>
                         <li><strong>HDFC:</strong> 8.60-9.50% p.a.</li>
@@ -1035,7 +1035,7 @@
 
                 <div class="info-card">
                     <h3>🚗 Car Loan Comparison</h3>
-                    <p><strong>Typical Rates (2024):</strong></p>
+                    <p><strong>Typical Rates:</strong></p>
                     <ul>
                         <li><strong>New Car:</strong> 8.5-11% p.a.</li>
                         <li><strong>Used Car:</strong> 10-14% p.a.</li>
@@ -1054,7 +1054,7 @@
 
                 <div class="info-card">
                     <h3>💼 Personal Loan Comparison</h3>
-                    <p><strong>Typical Rates (2024):</strong></p>
+                    <p><strong>Typical Rates:</strong></p>
                     <ul>
                         <li><strong>Salaried (Good credit):</strong> 10-16% p.a.</li>
                         <li><strong>Self-employed:</strong> 14-21% p.a.</li>
@@ -1073,7 +1073,7 @@
 
                 <div class="info-card">
                     <h3>🏢 Business Loan Comparison</h3>
-                    <p><strong>Typical Rates (2024):</strong></p>
+                    <p><strong>Typical Rates:</strong></p>
                     <ul>
                         <li><strong>Secured:</strong> 9-14% p.a.</li>
                         <li><strong>Unsecured:</strong> 14-24% p.a.</li>
@@ -1221,7 +1221,7 @@
                     <span>▼</span>
                 </div>
                 <div class="faq-answer">
-                    <strong>Floating rate is usually better for long-term loans (10+ years).</strong> Here's the complete comparison: <strong>Floating Rate Advantages:</strong> (1) <strong>Lower rates</strong> - Usually 0.5-1% lower than fixed. (2) <strong>Rate cuts benefit</strong> - When RBI cuts rates, your EMI reduces. (3) <strong>No prepayment charges</strong> - Can prepay anytime without penalty. (4) <strong>Better long-term</strong> - Over 15-20 years, floating typically wins. <strong>Fixed Rate Advantages:</strong> (1) <strong>Payment certainty</strong> - EMI never changes, easy budgeting. (2) <strong>Protection from hikes</strong> - If rates increase, you're safe. (3) <strong>Peace of mind</strong> - No worry about rate changes. <strong>Historical data (India):</strong> Over past 15 years, floating rate borrowers have paid 2-3% less on average than fixed rate borrowers. RBI rate cut cycles benefit floating rate holders significantly. <strong>Best strategy by situation:</strong> (1) <strong>Long tenure (15-30 years):</strong> Floating rate recommended. Rate cycles will average out favorably. (2) <strong>Short tenure (1-5 years):</strong> Fixed rate okay if currently low rates. Less time to benefit from cycles. (3) <strong>Rising rate environment:</strong> Consider fixed for 2-3 years, then switch to floating. (4) <strong>Risk-averse personality:</strong> Fixed rate for peace of mind, even if costs slightly more. <strong>Hybrid option:</strong> Some banks offer combination - 50% fixed + 50% floating. Balances both benefits. <strong>Current recommendation (2024):</strong> Floating rate for home loans (20-30 year tenure). Rates are moderate and likely to stabilize or decrease.                     <strong>Check:</strong> Prepayment charges on fixed rate loans (often 2-5%) vs zero on floating.
+                    <strong>Floating rate is usually better for long-term loans (10+ years).</strong> Here's the complete comparison: <strong>Floating Rate Advantages:</strong> (1) <strong>Lower rates</strong> - Usually 0.5-1% lower than fixed. (2) <strong>Rate cuts benefit</strong> - When RBI cuts rates, your EMI reduces. (3) <strong>No prepayment charges</strong> - Can prepay anytime without penalty. (4) <strong>Better long-term</strong> - Over 15-20 years, floating typically wins. <strong>Fixed Rate Advantages:</strong> (1) <strong>Payment certainty</strong> - EMI never changes, easy budgeting. (2) <strong>Protection from hikes</strong> - If rates increase, you're safe. (3) <strong>Peace of mind</strong> - No worry about rate changes. <strong>Historical data (India):</strong> Over past 15 years, floating rate borrowers have paid 2-3% less on average than fixed rate borrowers. RBI rate cut cycles benefit floating rate holders significantly. <strong>Best strategy by situation:</strong> (1) <strong>Long tenure (15-30 years):</strong> Floating rate recommended. Rate cycles will average out favorably. (2) <strong>Short tenure (1-5 years):</strong> Fixed rate okay if currently low rates. Less time to benefit from cycles. (3) <strong>Rising rate environment:</strong> Consider fixed for 2-3 years, then switch to floating. (4) <strong>Risk-averse personality:</strong> Fixed rate for peace of mind, even if costs slightly more. <strong>Hybrid option:</strong> Some banks offer combination - 50% fixed + 50% floating. Balances both benefits. <strong>Current recommendation:</strong> Floating rate for home loans (20-30 year tenure). Rates are moderate and likely to stabilize or decrease.                     <strong>Check:</strong> Prepayment charges on fixed rate loans (often 2-5%) vs zero on floating.
                 </div>
             </div>
 
