--- a/calculator/ppf-calculator/index.html
+++ b/calculator/ppf-calculator/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>PPF Calculator 2024 - Public Provident Fund Maturity Calculator India | Free Tool</title>
+    <title>PPF Calculator - Public Provident Fund Maturity Calculator India | Free Tool</title>
     <meta name="title" content="PPF Calculator - Calculate PPF Maturity Amount & Interest Returns">
     <meta name="description" content="Free PPF Calculator to calculate Public Provident Fund maturity amount, interest earned & returns. Current PPF rate 7.1%. Calculate 15-year PPF returns. Tax-free investment. By expert CAs.">
     <meta name="keywords" content="PPF calculator, public provident fund calculator, PPF maturity calculator, PPF interest calculator, PPF return calculator, PPF investment calculator, tax free investment, Section 80C">
@@ -887,7 +887,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>🏦 PPF Calculator 2024</h2>
+            <h2>🏦 PPF Calculator</h2>
             <p><strong>Public Provident Fund Calculator</strong></p>
             <p>Calculate PPF Maturity Amount & Tax-Free Returns | Current Rate: 7.1%</p>
             <div class="hero-stats">
