--- a/calculator/retirement-planning-calculator/index.html
+++ b/calculator/retirement-planning-calculator/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>Retirement Planning Calculator 2024 - Calculate Retirement Corpus | Free Tool</title>
-    <meta name="title" content="Retirement Planning Calculator 2024 - Calculate Retirement Corpus">
+    <title>Retirement Planning Calculator - Calculate Retirement Corpus | Free Tool</title>
+    <meta name="title" content="Retirement Planning Calculator - Calculate Retirement Corpus">
     <meta name="description" content="Free Retirement Planning Calculator. Calculate retirement corpus needed, monthly savings required. Plan your retirement with inflation. By Sidhi & Associates CAs.">
     <meta name="keywords" content="retirement calculator, retirement planning, retirement corpus calculator, pension calculator, retirement savings calculator, post retirement planning">
     <meta name="robots" content="index, follow, max-image-preview:large">
