--- a/calculator/sip-calculator/index.html
+++ b/calculator/sip-calculator/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>SIP Calculator 2024 - Mutual Fund SIP Return Calculator India | Free Tool</title>
+    <title>SIP Calculator - Mutual Fund SIP Return Calculator India | Free Tool</title>
     <meta name="title" content="SIP Calculator - Calculate Mutual Fund SIP Returns & Wealth Growth">
     <meta name="description" content="Free SIP Calculator to calculate mutual fund SIP returns, maturity amount & wealth growth. Plan your SIP investment with monthly, quarterly, annual options. Calculate 10%, 12%, 15% CAGR returns. By expert CAs.">
     <meta name="keywords" content="SIP calculator, mutual fund SIP calculator, SIP return calculator, SIP investment calculator, monthly SIP calculator, wealth calculator, ELSS calculator, systematic investment plan, CAGR calculator">
@@ -888,7 +888,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>📈 SIP Calculator 2024</h2>
+            <h2>📈 SIP Calculator</h2>
             <p><strong>Systematic Investment Plan Calculator</strong></p>
             <p>Calculate Mutual Fund SIP Returns & Build Wealth Systematically</p>
             <div class="hero-stats">
