--- a/calculator/tds-calculator/index.html
+++ b/calculator/tds-calculator/index.html
@@ -7,9 +7,9 @@
     <link rel="icon" href="https://sidhiandassociates.github.io/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>TDS Calculator 2024 - Tax Deducted at Source Calculator India | Free Tool</title>
+    <title>TDS Calculator - Tax Deducted at Source Calculator India | Free Tool</title>
     <meta name="title" content="TDS Calculator - Calculate Tax Deducted at Source (TDS)">
-    <meta name="description" content="Free TDS Calculator to calculate Tax Deducted at Source for salary, interest, rent, commission, professional fees. TDS rates 2024-25, TDS filing & ITR. By expert CAs.">
+    <meta name="description" content="Free TDS Calculator to calculate Tax Deducted at Source for salary, interest, rent, commission, professional fees. TDS rates, TDS filing & ITR. By expert CAs.">
     <meta name="keywords" content="TDS calculator, tax deducted at source, TDS rates, salary TDS calculator, interest TDS, rent TDS, commission TDS, professional fees TDS, TDS section, ITR filing">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
     <meta name="author" content="Sidhi & Associates - Chartered Accountants">
@@ -20,7 +20,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://sidhiandassociates.github.io/calculator/tds-calculator/">
     <meta property="og:title" content="TDS Calculator - Calculate Tax Deducted at Source Instantly">
-    <meta property="og:description" content="Calculate TDS for salary, interest, rent, commission & professional fees. Free calculator with TDS rates 2024-25. By expert CAs.">
+    <meta property="og:description" content="Calculate TDS for salary, interest, rent, commission & professional fees. Free calculator with TDS rates. By expert CAs.">
     <meta property="og:image" content="https://sidhiandassociates.github.io/sidhi.png">
     <meta property="og:site_name" content="Sidhi & Associates">
     
@@ -738,7 +738,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>📊 TDS Calculator 2024-25</h2>
+            <h2>📊 TDS Calculator</h2>
             <p><strong>Tax Deducted at Source Calculator</strong></p>
             <p>Calculate TDS on Salary | Interest | Rent | Commission | Professional Fees</p>
             <div class="hero-stats">
