--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/sidhi.png" type="image/png" />
     
     <!-- Primary Meta Tags -->
-    <title>Free Financial Calculators 2024 - Tax, Loan, Investment Calculators | Sidhi & Associates</title>
+    <title>Free Financial Calculators - Tax, Loan, Investment Calculators | Sidhi & Associates</title>
     <meta name="title" content="Free Financial Calculators - Tax, Loan, Investment Calculators">
     <meta name="description" content="Free online financial calculators for India. Calculate HRA exemption, home loan eligibility, retirement planning, income tax, EMI & more. By expert CAs.">
     <meta name="keywords" content="financial calculators, tax calculator, loan calculator, investment calculator, HRA calculator, home loan calculator, retirement calculator, EMI calculator">
@@ -634,7 +634,7 @@
                         <span class="calc-badge badge-tax">Income Tax</span>
                         <span class="calc-icon">📊</span>
                         <h4 class="calc-title">Income Tax Calculator</h4>
-                        <p class="calc-description">Calculate income tax liability for FY 2024-25. Compare old vs new tax regime and save maximum tax.</p>
+                        <p class="calc-description">Calculate income tax liability. Compare old vs new tax regime and save maximum tax.</p>
                         <ul class="calc-features">
                             <li>Old vs New regime comparison</li>
                             <li>All deductions covered</li>
