--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
             <a href="/services/">Services</a>
             <a href="/why-us/">Why Us</a>
             <a href="/faq/">FAQs</a>
-            <!-- <a href="#locations">Locations</a> -->
+            <a href="/blog/">Blogs</a>
             <a href="/calculator/">Calculators</a>
             <a href="/about/">About</a>
         </div>
