Update index.html calculator added

--- a/services/tax-planning-filing/index.html
+++ b/services/tax-planning-filing/index.html
@@ -1287,6 +1287,35 @@
         </div>
     </section>
 
+    <!-- Add this to Tax Planning & Filing service page -->
+<section style="background: #F9F7F4; padding: 50px 20px; margin: 60px 0;">
+    <div style="max-width: 1200px; margin: 0 auto; text-align: center;">
+        <h2 style="color: #0A2647; font-size: 2em; margin-bottom: 15px;">🧮 Free Tax Calculators</h2>
+        <p style="color: #666; margin-bottom: 30px; font-size: 1.1em;">Calculate your taxes instantly with our free tools</p>
+        
+        <div style="display: flex; flex-wrap: wrap; gap: 15px; justify-content: center;">
+            <a href="https://sidhiandassociates.github.io/calculator/income-tax-calculator/" 
+               style="background: white; padding: 15px 30px; border-radius: 25px; text-decoration: none; 
+                      color: #0A2647; font-weight: 600; box-shadow: 0 2px 10px rgba(0,0,0,0.1); 
+                      transition: all 0.3s; display: inline-block;">
+                📊 Income Tax Calculator
+            </a>
+            <a href="https://sidhiandassociates.github.io/calculator/advance-tax-calculator/" 
+               style="background: white; padding: 15px 30px; border-radius: 25px; text-decoration: none; 
+                      color: #0A2647; font-weight: 600; box-shadow: 0 2px 10px rgba(0,0,0,0.1); 
+                      transition: all 0.3s; display: inline-block;">
+                💰 Advance Tax Calculator
+            </a>
+            <a href="https://sidhiandassociates.github.io/calculator/HRA/" 
+               style="background: white; padding: 15px 30px; border-radius: 25px; text-decoration: none; 
+                      color: #0A2647; font-weight: 600; box-shadow: 0 2px 10px rgba(0,0,0,0.1); 
+                      transition: all 0.3s; display: inline-block;">
+                🏠 HRA Calculator
+            </a>
+        </div>
+    </div>
+</section>
+
     <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
