--- a/calculator/tds-calculator/index.html
+++ b/calculator/tds-calculator/index.html
@@ -1271,6 +1271,42 @@
         </div>
     </section>
 
+   <!-- Related Services for TDS Calculator -->
+<section style="background: linear-gradient(135deg, #F9F7F4 0%, #F5E6C8 100%); padding: 60px 20px; margin-top: 60px;">
+    <div style="max-width: 1200px; margin: 0 auto;">
+        <h2 style="text-align: center; color: #0A2647; font-size: 2.2em; margin-bottom: 15px;">TDS Compliance Made Easy</h2>
+        <p style="text-align: center; color: #666; font-size: 1.1em; max-width: 700px; margin: 0 auto 40px;">Ensure error-free TDS compliance with our professional services</p>
+        
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
+            <a href="https://sidhiandassociates.github.io/services/tds-return-filing/" 
+               style="background: white; padding: 30px; border-radius: 12px; text-decoration: none; box-shadow: 0 3px 15px rgba(0,0,0,0.08); transition: all 0.3s; border-top: 4px solid #D4A43C; display: block;">
+                <div style="font-size: 3em; margin-bottom: 15px;">📋</div>
+                <h3 style="color: #0A2647; font-size: 1.4em; margin-bottom: 12px;">TDS Return Filing</h3>
+                <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">Complete TDS return filing and compliance management services.</p>
+                <span style="color: #D4A43C; font-weight: 600;">File TDS Returns →</span>
+            </a>
+
+            <a href="https://sidhiandassociates.github.io/services/tax-planning-filing/" 
+               style="background: white; padding: 30px; border-radius: 12px; text-decoration: none; box-shadow: 0 3px 15px rgba(0,0,0,0.08); transition: all 0.3s; border-top: 4px solid #D4A43C; display: block;">
+                <div style="font-size: 3em; margin-bottom: 15px;">📊</div>
+                <h3 style="color: #0A2647; font-size: 1.4em; margin-bottom: 12px;">Tax Planning Services</h3>
+                <p style="color: #666; line-height: 1.6; margin-bottom: 15px;">Strategic tax planning to optimize your TDS payments.</p>
+                <span style="color: #D4A43C; font-weight: 600;">Learn More →</span>
+            </a>
+
+            <div style="background: linear-gradient(135deg, #0A2647 0%, #144272 100%); padding: 30px; border-radius: 12px; color: white; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+                <div style="font-size: 3em; margin-bottom: 15px;">📞</div>
+                <h3 style="color: white; font-size: 1.4em; margin-bottom: 12px;">Need Help?</h3>
+                <p style="color: rgba(255,255,255,0.9); line-height: 1.6; margin-bottom: 20px;">Speak with TDS experts</p>
+                <a href="tel:+917889257045" 
+                   style="background: #D4A43C; color: white; padding: 12px 30px; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block;">
+                    Call Now
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+    
     <!-- CTA Section -->
     <div class="container">
         <div class="cta-section">
