--- a/faq/index.html
+++ b/faq/index.html
@@ -899,7 +899,7 @@
                 <div class="social-links">
                     <a href="https://wa.me/917889257045" class="social-icon" target="_blank" rel="noopener">📱</a>
                     <a href="#" class="social-icon" target="_blank" rel="noopener">f</a>
-                    <a href="linkedin.com/company/110248666" class="social-icon" target="_blank" rel="noopener">in</a>
+                    <a href="https://linkedin.com/company/110248666" class="social-icon" target="_blank" rel="noopener">in</a>
                 </div>
             </div>
         </div>
